--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,7 @@ framework = arduino
 
 upload_speed = 921600
 monitor_speed = 115200
+
+lib_deps =
+    Adafruit Unified Sensor
+    DHT sensor library
