--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,8 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 
-upload_speed = 921600
+upload_port = /dev/cu.wchusbserial1440
+upload_speed = 460800
 monitor_speed = 115200
 
 lib_deps =
