--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
-platform = espressif8266
-board = esp12e
+[env:d1]
 framework = arduino
+platform = espressif8266
+; board = esp12e
+board = d1
 
 upload_port = /dev/cu.wchusbserial1440
 upload_speed = 460800
