--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,14 @@ platform = espressif8266
 ; board = esp12e
 board = d1
 
-upload_port = /dev/cu.wchusbserial1440
-upload_speed = 460800
-monitor_speed = 115200
+; monitor_speed = 115200
+
+; upload_port = /dev/cu.wchusbserial1440
+; upload_speed = 460800
+
+upload_protocol = espota
+upload_port = mgs.local
+; upload_port = 192.168.0.16
 
 lib_deps =
     Adafruit Unified Sensor
