--- a/platformio.ini
+++ b/platformio.ini
@@ -11,17 +11,19 @@
 [env:d1]
 framework = arduino
 platform = espressif8266
-; board = esp12e
 board = d1
 
-; monitor_speed = 115200
+; [env:esp12e]
+; framework = arduino
+; platform = espressif8266
+; board = esp12e
 
 ; upload_port = /dev/cu.wchusbserial1440
 ; upload_speed = 460800
 
 upload_protocol = espota
-upload_port = mgs.local
-; upload_port = 192.168.0.16
+; upload_port = mgs-hotbed.local
+upload_port = 192.168.0.16
 
 lib_deps =
     Adafruit Unified Sensor
