add lambda withBlink

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,8 +22,8 @@ board = d1
 ; upload_speed = 460800
 
 upload_protocol = espota
-; upload_port = mgs-hotbed.local
-upload_port = 192.168.0.16
+upload_port = mgs-hotbed.local
+; upload_port = 192.168.0.16
 
 lib_deps =
     Adafruit Unified Sensor
