--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@ framework = arduino
 platform = espressif8266
 board = d1
 
+monitor_port = /dev/cu.wchusbserial1440
+monitor_speed = 115200
+
 ; upload_port = /dev/cu.wchusbserial1440
 ; upload_speed = 460800
 
