--- a/platformio.ini
+++ b/platformio.ini
@@ -16,11 +16,11 @@ board = d1
 monitor_port = /dev/cu.wchusbserial1440
 monitor_speed = 115200
 
-upload_port = /dev/cu.wchusbserial1440
-upload_speed = 460800
+; upload_port = /dev/cu.wchusbserial1440
+; upload_speed = 460800
 
-; upload_protocol = espota
-; upload_port = 192.168.0.30
+upload_protocol = espota
+upload_port = 192.168.0.30
 
 lib_deps =
     Adafruit Unified Sensor
