--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:d1]
 framework = arduino
 platform = espressif8266
@@ -16,11 +6,11 @@ board = d1
 monitor_port = /dev/cu.wchusbserial1440
 monitor_speed = 115200
 
-upload_port = /dev/cu.wchusbserial1440
-upload_speed = 460800
+; upload_port = /dev/cu.wchusbserial1440
+; upload_speed = 460800
 
-; upload_protocol = espota
-; upload_port = 192.168.0.30
+upload_protocol = espota
+upload_port = 192.168.0.30
 
 lib_deps =
     Adafruit Unified Sensor
