--- a/platformio.ini
+++ b/platformio.ini
@@ -3,11 +3,11 @@ framework = arduino
 platform = espressif8266
 board = d1
 
-monitor_port = /dev/cu.wchusbserial1450
-monitor_speed = 115200
+; monitor_port = /dev/cu.wchusbserial1450
+; monitor_speed = 115200
 
-; upload_port = /dev/cu.wchusbserial1450
-; upload_speed = 460800
+upload_port = /dev/cu.wchusbserial1450
+upload_speed = 460800
 
 upload_protocol = espota
 upload_port = 192.168.0.30
