migrate to new board

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,16 +1,16 @@
-[env:d1]
+[env:d1_mini]
 framework = arduino
 platform = espressif8266
-board = d1
+board = d1_mini
 
 monitor_port = /dev/cu.wchusbserial1450
 monitor_speed = 115200
 
-; upload_port = /dev/cu.wchusbserial1450
-; upload_speed = 460800
+;upload_port = /dev/cu.wchusbserial1450
+;upload_speed = 460800
 
 upload_protocol = espota
-upload_port = 192.168.0.30
+upload_port = 192.168.0.51
 
 lib_deps =
     Adafruit Unified Sensor
