--- a/platformio.ini
+++ b/platformio.ini
@@ -1,18 +1,76 @@
-[env:d1_mini]
-framework = arduino
-platform = espressif8266
-board = d1_mini
+[platformio]
+env_default = test-ota
+
+[common]
+version = 0.1.0
+lib_deps = Adafruit Unified Sensor, DHT sensor library, PubSubClient
 
 monitor_port = /dev/cu.wchusbserial1450
 monitor_speed = 115200
 
-;upload_port = /dev/cu.wchusbserial1450
-;upload_speed = 460800
+upload_port = /dev/cu.wchusbserial1450
+upload_speed = 921600
+
+; ENV TEST
+;==============================================================================
+[env:test-ota]
+platform = espressif8266
+framework = arduino
+board = d1_mini
+
+lib_deps = ${common.lib_deps}
+src_build_flags = -DBUILD_TAG=test-${common.version} -DENABLE_DEBUG
+
+monitor_port = ${common.monitor_port}
+monitor_speed = ${common.monitor_speed}
+
+upload_protocol = espota
+upload_port = 192.168.0.31
+
+; ENV PROD
+;==============================================================================
+[env:prod-ota]
+platform = espressif8266
+framework = arduino
+board = d1_mini
+
+lib_deps = ${common.lib_deps}
+src_build_flags = -DBUILD_TAG=prod-${common.version} -DENABLE_DEBUG
+
+monitor_port = ${common.monitor_port}
+monitor_speed = ${common.monitor_speed}
 
 upload_protocol = espota
 upload_port = 192.168.0.51
 
-lib_deps =
-    Adafruit Unified Sensor
-    DHT sensor library
-    PubSubClient
+; ENV TEST-SERIAL
+;==============================================================================
+[env:test]
+platform = espressif8266
+framework = arduino
+board = d1_mini
+
+lib_deps = ${common.lib_deps}
+src_build_flags = -DBUILD_TAG=test-${common.version} -DENABLE_DEBUG
+
+monitor_port = ${common.monitor_port}
+monitor_speed = ${common.monitor_speed}
+
+upload_port = ${common.upload_port}
+upload_speed = ${common.upload_speed}
+
+; ENV PROD-SERIAL
+;==============================================================================
+[env:prod]
+platform = espressif8266
+framework = arduino
+board = d1_mini
+
+lib_deps = ${common.lib_deps}
+src_build_flags = -DBUILD_TAG=prod-${common.version} -DENABLE_DEBUG
+
+monitor_port = ${common.monitor_port}
+monitor_speed = ${common.monitor_speed}
+
+upload_port = ${common.upload_port}
+upload_speed = ${common.upload_speed}
