--- a/platformio.ini
+++ b/platformio.ini
@@ -47,6 +47,8 @@ monitor_speed = ${common.monitor_speed}
 upload_port = ${common.upload_port}
 upload_speed = ${common.upload_speed}
 
+lib_deps = NTPClient
+
 ; ENV PROD-SERIAL
 ;==============================================================================
 [env:prod]
