--- a/platformio.ini
+++ b/platformio.ini
@@ -47,7 +47,7 @@ monitor_speed = ${common.monitor_speed}
 upload_port = ${common.upload_port}
 upload_speed = ${common.upload_speed}
 
-;lib_deps = NTPClient
+lib_deps = FastLED
 
 ; ENV PROD-SERIAL
 ;==============================================================================
