--- a/platformio.ini
+++ b/platformio.ini
@@ -48,7 +48,7 @@ monitor_speed = ${common.monitor_speed}
 upload_port = ${common.upload_port}
 upload_speed = ${common.upload_speed}
 
-lib_deps = FastLED
+lib_deps = FastLED, TaskScheduler
 
 ; ENV PROD-SERIAL
 ;==============================================================================
