--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-env_default = test
-;env_default = prod-ota
+;env_default = test
+env_default = prod-ota
 
 [common]
 monitor_port = /dev/cu.wchusbserial1450
