--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,19 @@ monitor_speed = ${common.monitor_speed}
 upload_protocol = espota
 upload_port = 192.168.0.31
 
+; ENV PROD-INCUBATOR
+;==============================================================================
+[env:prod-incubator]
+platform = espressif8266
+framework = arduino
+board = d1
+
+monitor_port = ${common.monitor_port}
+monitor_speed = ${common.monitor_speed}
+
+upload_protocol = espota
+upload_port = 192.168.0.41
+
 ; ENV PROD
 ;==============================================================================
 [env:prod-ota]
