--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,8 @@ monitor_speed = 115200
 upload_port = /dev/cu.wchusbserial1450
 upload_speed = 921600
 
+lib_deps = FastLED, TaskScheduler, ArduinoJson
+
 ; ENV TEST
 ;==============================================================================
 [env:test-ota]
@@ -20,6 +22,8 @@ monitor_speed = ${common.monitor_speed}
 
 upload_protocol = espota
 upload_port = 192.168.0.31
+
+lib_deps = ${common.lib_deps}
 
 ; ENV PROD-INCUBATOR
 ;==============================================================================
@@ -34,6 +38,8 @@ monitor_speed = ${common.monitor_speed}
 upload_protocol = espota
 upload_port = 192.168.0.41
 
+lib_deps = ${common.lib_deps}
+
 ; ENV PROD
 ;==============================================================================
 [env:prod-ota]
@@ -46,6 +52,8 @@ monitor_speed = ${common.monitor_speed}
 
 upload_protocol = espota
 upload_port = 192.168.0.51
+
+lib_deps = ${common.lib_deps}
 
 ; ENV TEST-SERIAL
 ;==============================================================================
@@ -60,7 +68,7 @@ monitor_speed = ${common.monitor_speed}
 upload_port = ${common.upload_port}
 upload_speed = ${common.upload_speed}
 
-lib_deps = FastLED, TaskScheduler, ArduinoJson
+lib_deps = ${common.lib_deps}
 
 ; ENV PROD-SERIAL
 ;==============================================================================
@@ -74,3 +82,5 @@ monitor_speed = ${common.monitor_speed}
 
 upload_port = ${common.upload_port}
 upload_speed = ${common.upload_speed}
+
+lib_deps = ${common.lib_deps}
