--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-env_default = prod-ota
+env_default = test
 
 [common]
 monitor_port = /dev/cu.wchusbserial1450
@@ -28,6 +28,21 @@ lib_deps = ${common.lib_deps}
 ; ENV PROD-INCUBATOR
 ;==============================================================================
 [env:prod-incubator]
+platform = espressif8266
+framework = arduino
+board = d1
+
+monitor_port = ${common.monitor_port}
+monitor_speed = ${common.monitor_speed}
+
+upload_port = ${common.upload_port}
+upload_speed = ${common.upload_speed}
+
+lib_deps = ${common.lib_deps}
+
+; ENV PROD-INCUBATOR-OTA
+;==============================================================================
+[env:prod-incubator-ota]
 platform = espressif8266
 framework = arduino
 board = d1
